<resources>
    <string name="app_name">z-finance</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Accounting application</string>
    <string name="nav_header_subtitle">trikser@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading...</string>

    <!-- боковое меню-->
    <string name="operations">Operations</string>
    <string name="sources">Sources</string>
    <string name="storages">Storages</string>
    <string name="reports">Reports</string>
    <string name="settings">Settings</string>
    <string name="help">About</string>

    <!--popup меню для справочников-->
    <string name="add_sub">+ Sub category</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="confirm">Confirm</string>
    <string name="confirm_delete">Delete record?</string>
    <string name="confirm_delete_amount">Delete amount?</string>
    <string name="has_operations">Can\'t delete record with operations</string>
    <string name="deleted">Cancel delete?</string>
    <string name="undo">UNDO</string>

    <!--TabItem для категорий-->
    <string name="tab_all">ALL</string>
    <string name="tab_income">INCOME</string>
    <string name="tab_outcome">OUTCOME</string>
    <string name="title_activity_edit_source">EditSourceActivity</string>

    <string name="name">Name</string>

    <string name="enter_name">Enter name</string>
    <string name="enter_value">Enter value</string>
    <string name="enter_amount">Enter amount</string>
    <string name="type">Type</string>

    <string name="select_source_from">Select source FROM</string>
    <string name="select_source_to">Select source TO</string>
    <string name="select_storage_from">Select storage FROM</string>
    <string name="select_storage_to">Select storage TO</string>

    <string name="income">Income</string>
    <string name="outcome">Outcome</string>
    <string name="transfer">Transfer</string>
    <string name="convert">Convert</string>

    <string name="add_income">+ Income</string>
    <string name="add_outcome">+ Outcome</string>
    <string name="add_transfer">+ Transfer</string>
    <string name="add_convert">+ Convert</string>

    <string name="editing">Edit</string>
    <string name="adding">Add</string>

    <string name="icon">Icon</string>

    <string name="select_icon">Select icon</string>

    <string name="title_activity_operation_list">OperationListActivity</string>
    <string name="title_activity_select_icon">SelectIconActivity</string>
    <string name="title_activity_edit_income_operation">EditIncomeOperationActivity</string>

    <string name="convert_from_title">From</string>
    <string name="convert_to_title">To</string>

    <string name="enter_amount_from">Enter amount FROM</string>
    <string name="enter_amount_to">Enter amount TO</string>

    <string name="source">Source</string>
    <string name="storage">Storage</string>
    <string name="storage_from">Storage (from)</string>
    <string name="storage_to">Storage (to)</string>
    <string name="amount">Amount</string>
    <string name="currency">Currency</string>
    <string name="operation_type">Operation type</string>

    <string name="no_available_currency">No available currency</string>
    <string name="currency_not_exist">currency not exist for storage</string>

    <string name="select_value">Select value</string>
    <string name="balance">Balance</string>

    <string name="currency_list">Available currencies</string>

    <string name="total_balance">Total amount:</string>

</resources>
