<?xml version="1.0" encoding="utf-8"?>


<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_gravity="center_horizontal"
    android:baselineAligned="false"
    android:gravity="center">

    <Button
        android:id="@+id/btn_add_income"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_income"
        android:textColor="@color/colorText" />

    <Button
        android:id="@+id/btn_add_outcome"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_outcome"
        android:textColor="@color/colorText"

        />

    <Button
        android:id="@+id/btn_add_transfer"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_transfer"
        android:textColor="@color/colorText"

        />

    <Button
        android:id="@+id/btn_add_convert"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/add_convert"

        android:textColor="@color/colorText" />


</LinearLayout>

