<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.TabLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/tabs"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/toolbarColor"
    app:tabGravity="fill"

    app:tabIndicatorColor="@color/colorGreen"
    app:tabMode="fixed"

    >

    <!--app:tabTextColor="@color/colorWhite"-->
    <!--app:tabSelectedTextColor="@color/tabTextColor"-->

    <android.support.design.widget.TabItem
        android:id="@+id/tab_all"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/tab_all"
        android:background="@drawable/ripple_rectangle"/>

    <android.support.design.widget.TabItem
        android:id="@+id/tab_income"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/tab_income" />

    <android.support.design.widget.TabItem
        android:id="@+id/tab_outcome"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/tab_outcome" />

</android.support.design.widget.TabLayout>
