<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:baselineAligned="false">

                <ImageView
                    android:id="@+id/ic_back_node"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="left"
                    android:paddingLeft="10dp"
                    android:src="@android:drawable/ic_menu_revert"

                    android:visibility="invisible" />


                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/sources" />

                <ImageView
                    android:id="@+id/ic_add_node"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingRight="10dp"
                    android:src="@android:drawable/ic_menu_add" />

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            app:tabMode="fixed"

            >

            <android.support.design.widget.TabItem
                android:id="@+id/tab_all"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/all" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_income"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/income" />

            <android.support.design.widget.TabItem
                android:id="@+id/tab_outcome"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/outcome" />


        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</android.support.design.widget.CoordinatorLayout>